--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "wickedpicker",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A simple jQuery timepicker plugin.",
   "main": "gulpfile.js",
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.4",
+    "gulp-sass": "4.1.0",
+    "node-sass": "4.14.1",
     "gulp-uglify": "^1.2.0",
     "node-bourbon": "^4.2.3"
   },
